--- a/public/index.html
+++ b/public/index.html
@@ -29,4 +29,8 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"
   ></script>
+  <script
+    async
+    src="https://cse.google.com/cse.js?cx=442fddf283e904f45"
+  ></script>
 </html>
